<resources>
    <string name="app_name">Programmer</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="favorites">Favorites</string>
    <string name="share_the_app">Share the app</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="more">More</string>
    <string name="tutorials">Tutorials</string>
    <string name="websites">Websites</string>
    <string name="learn">Learn</string>
    <string name="delete_from_favorites">Delete from Favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
</resources>